--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "@types/crypto-js": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "jquery": "^1.9.1",
